[package]
name = "api_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
dotenv = "0.15"
tokio = { version = "1.44.2", features = ["full"] }
chrono = { version = "0.4.41", features = ["serde"] }
actix-cors = "0.6.4"